[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/enemies/templates/Enemy_Template.gd" type="Script" id=1]
[ext_resource path="res://objects/UI/Enemy_HP_UI.tscn" type="PackedScene" id=2]

[node name="Enemy_Template" type="RigidBody2D"]

input/pickable = false
collision/layers = 2
collision/mask = 2
mode = 2
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 999
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
max_hp = 0.0
speed = 0.0

[node name="Rotate" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Rotate"]

animation = "default"
playing = true

[node name="Enemy_HP_UI" parent="." instance=ExtResource( 2 )]

[node name="CC_Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_enter" from="." to="." method="hit"]

[connection signal="timeout" from="CC_Timer" to="." method="cc_timeout"]


